# ez-uploader

./: .gitignore  Cargo.toml  LICENSE.md  Maidfile.toml  README.md
src/: auth.rs  cache.rs  files.rs  globals.rs  helpers.rs  main.rs  short.rs
src/routes/: auth.rs  files.rs  mod.rs  shorten.rs
