[package]
name = "e-z"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://lab.themackabu.dev/self/ez"
description = "Interact directly with the e-z.host API"

[dependencies]
home = "0.5.9"
log = "0.4.20"
colored = "2.1.0"
inquire = "0.6.2"
macros-rs = "0.5.0"
indicatif = "0.17.7"
env_logger = "0.10.1"
serde_json = "1.0.111"
pretty_env_logger = "0.5.0"
global_placeholders = "0.1.0"
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking", "json", "multipart", "stream"] } 
clap-verbosity-flag = "2.1.2"
