[package]
name = "e-z"
version = "0.2.2"
edition = "2021"
license = "MIT"
repository = "https://lab.themackabu.dev/self/ez"
description = "Interact directly with the e-z.host API"

[dependencies]
home = "0.5.9"
log = "0.4.20"
sled = "0.34.7"
colored = "2.1.0"
inquire = "0.6.2"
anyhow = "1.0.79"
macros-rs = "0.5.0"
indicatif = "0.17.7"
once_cell = "1.19.0"
env_logger = "0.10.1"
serde_json = "1.0.111"
pretty_env_logger = "0.5.0"
global_placeholders = "0.1.0"
clap-verbosity-flag = "2.1.2"
clap = { version = "4.4.18", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
pickledb = { version = "0.5.1", features = ["bincode"] }
reqwest = { version = "0.11.23", features = ["blocking", "json", "multipart", "stream"] } 
image = "0.24.9"
tempfile = "3.10.1"
arboard = { version = "3.3.2", features = ["wayland-data-control"] }
