[package]
name = "e-z"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/theMackabu/ez-uploader"
description = "Interact directly with the e-z.host API"

[dependencies]
home = "0.5.9"
log = "0.4.21"
sled = "0.34.7"
image = "0.24.9"
colored = "2.1.0"
inquire = "0.6.2"
anyhow = "1.0.81"
macros-rs = "0.5.0"
tempfile = "3.10.1"
indicatif = "0.17.8"
once_cell = "1.19.0"
env_logger = "0.10.2"
serde_json = "1.0.115"
pretty_env_logger = "0.5.0"
global_placeholders = "0.1.0"
clap-verbosity-flag = "2.2.0"
clap = { version = "4.5.4", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
pickledb = { version = "0.5.1", features = ["bincode"] }
arboard = { version = "3.3.2", features = ["wayland-data-control"] }
reqwest = { version = "0.11.27", features = ["blocking", "json", "multipart", "stream"] } 
